2015-03-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.9.

2015-03-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0.8 release.

	* CHANGES: Updated.

2015-02-23  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r21674.

	* nasl/nasl_ssh.c (nasl_ssh_userauth): Don't attempt to authenticate if
	provided private key is empty.

2015-02-10  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21582.

	* omp/omp.c (omp_create_target_ext): Add SSH port option.

	* omp/omp.h (omp_create_target_opts_t): Add ssh_credential_port.
	(omp_create_target_opts_defaults): Init ssh_credential_port.

2015-02-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r21575.

	* nasl/nasl_ssh.c (nasl_ssh_userauth): Refactor code. Always try to get
	the private key and keep support for empty passwords.  Based on patch by
	Michel Pelletier.

2015-02-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r21562.

	* nasl/nasl_packet_forgery.c (pseudo_udp_hdr): Add an extra byte for
	padding so that the udp checksum is calculated correctly.

2015-01-29  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.8.

2015-01-29  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0.7 release.

	* CHANGES: Updated.

2015-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/wmi-howto.txt: Document location of latest patch and describe
	how the patch should be applied.

2015-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21301.

	* misc/openvas_server.c (server_attach_internal): Use unsigned int for
	retries, to avoid passing negatives to the sleep function.

2015-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21289.

	* misc/openvas_server.c (server_attach_internal): Sleep between retries
	of gnutls_handshake.
